fix: mise à jour configuration MongoDB Atlas et API Key
- Ajout de ConfigModule pour chargement .env
- Mise à jour API Key: DEXCHANGE-API-KEY-2025-TEST-SECURE → clé
- Configuration MongoDB Atlas au lieu de local
- Correction docker-compose.yml (suppression service MongoDB local)
- Mise à jour documentation (README.md, QUICK_START.md)
- Nettoyage imports inutilisés dans seed.ts
- Installation @nestjs/config

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 PORT=3000
 NODE_ENV=development
 
-# MongoDB
-MONGODB_URI=mongodb://localhost:27017/dexchange-transfers
+# MongoDB Atlas (cloud)
+MONGODB_URI=mongodb+srv://babacd345:passer123@dexchange-transfers.vzmfpv8.mongodb.net/?appName=dexchange-transfers
 
 # API Key (pour la démonstration)
-API_KEY=DEXCHANGE-API-KEY-2025-TEST-SECURE
+API_KEY=clé
